--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,5 +10,8 @@ jobs:
   say-hi:
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
+        with:
+            fetch-depth: 0
       - name: Echo Hi
         run: echo "hi"
