--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,7 @@ jobs:
         run: |
           echo "Contents of .git/config:"
           cat .git/config
+          pwd
+          ls -la ./
       - name: Echo Hi
         run: echo "hi"
