--- a/.github/workflows/secret-user.yml
+++ b/.github/workflows/secret-user.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           fetch-depth: 0
       - name: Echo Hi
-        run: echo "${{ secrets.TEST_SECRET }} "
+        run: echo "${{ secrets.TEST_SECRET }} " && sleep 30
